fixed link color not showing

--- a/src/assets/css/general-style.css
+++ b/src/assets/css/general-style.css
@@ -36,10 +36,6 @@ h3 {
   margin-top: 3rem;
 }
 
-a {
-  color: inherit;
-}
-
 a:hover {
   color: inherit;
   text-decoration: none;
